# dtu-satellite-supply-chain-NOS3

./: .gitignore  README.md
.devcontainer/: devcontainer.json  install-deps.sh  post-create.sh
debug/: journal.md
debug/draco_port/: diff_stat_by_area.txt  merge_base.txt  new_files.txt  new_files_by_area.txt
docs/: ccsds-protocol-stack.md  draco-upgrade-walkthrough.md  fsw-build-errors-msgid-redefinition.md  noise-filters.md  nos3_fsw_error_fixes.md  postmortem_42_gui.md  telemetry-and-fsw-reference.md  threat-test-architecture.md  wsl2-build-knobs-windows-quickstart.md
docs/cfs-resource-limits/: ADDING_CFS_APPS.md  README.md
docs/debug/: README.md  attack-poc-integration.md  cfs-app-startup-and-tables.md  fsw-build-and-toolchain.md  gui-x11-forwarding.md  hardware-sim-telemetry.md  sim-ipc-and-42-connectivity.md  telemetry-and-elk-pipeline.md
docs/missions/: NOS3-DTU-EO1-mission-implementation.md
docs/poc/: poc-paper.md
docs/screenshots/: README.md
docs/security/: 00-dtu-secured-fork-notes.md  backport-traceability.md  cds-persistence.md  comparison-secured-vs-draco.md  draco-linux-poc.md  eps-spoof-comms-downgrade.md  gnss-mem-overwrite-analysis.md  gps-spoof-poc-runbook.md  imu-covert-channel-analysis.md  noisy_app-escalation-design.md  poc-manual-runbook.md  sb-pool-lock-analysis.md  syn-resource-exhaustion-analysis.md  threat-analysis.md
docs/thesis/: 00-overview.md  01-reproducibility.md  02-architecture.md  06-mission-doc-update.md  07-customizations-vs-upstream.md  09-glossary.md  README.md  setup-source.md
nos3/: Makefile
nos3/cfg/: nos3-mission.xml
nos3/components/generic_css/fsw/cfs/unit-test/: CMakeLists.txt
nos3/components/generic_css/fsw/cfs/unit-test/coveragetest/: coveragetest_generic_css_app.c  coveragetest_generic_css_device.c  generic_css_app_coveragetest_common.h
nos3/components/generic_css/fsw/cfs/unit-test/inc/: ut_generic_css_app.h
nos3/components/generic_css/fsw/cfs/unit-test/stubs/: generic_css_device_stubs.c
nos3/components/generic_gnss/sim/: CMakeLists.txt
nos3/components/generic_gnss/sim/inc/: generic_gnss_42_data_provider.hpp  generic_gnss_data_point.hpp  generic_gnss_data_provider.hpp  generic_gnss_hardware_model.hpp
nos3/components/generic_gnss/sim/src/: generic_gnss_42_data_provider.cpp  generic_gnss_data_point.cpp  generic_gnss_data_provider.cpp  generic_gnss_hardware_model.cpp
nos3/components/generic_torquer/fsw/cfs/unit-test/: CMakeLists.txt
nos3/components/generic_torquer/fsw/cfs/unit-test/coveragetest/: coveragetest_generic_torquer_app.c  coveragetest_generic_torquer_device.c
nos3/components/generic_torquer/fsw/cfs/unit-test/inc/: ut_generic_torquer_app.h
nos3/components/generic_torquer/fsw/cfs/unit-test/stubs/: generic_torquer_device_stubs.c  libtrq_stubs.c
nos3/components/generic_tt_c/sim/: CMakeLists.txt
nos3/components/generic_tt_c/sim/inc/: generic_tt_c_42_data_provider.hpp  generic_tt_c_data_point.hpp  generic_tt_c_data_provider.hpp  generic_tt_c_hardware_model.hpp
nos3/components/generic_tt_c/sim/src/: generic_tt_c_42_data_provider.cpp  generic_tt_c_data_point.cpp  generic_tt_c_data_provider.cpp  generic_tt_c_hardware_model.cpp
nos3/components/sample/fsw/fprime/sample_src/: CMakeLists.txt  SampleSim.cpp  SampleSim.hpp
nos3/debug/: journal.md
nos3/elk/: .env  apply_index_template.py  build_kibana_dashboards.py  docker-compose.yml  index_template.json  load_dashboards.py  logstash.conf  refresh_index_pattern_fields.py
nos3/fsw/apps/cs/: CMakeLists.txt  arch_build.cmake  mission_build.cmake
nos3/fsw/apps/cs/.github/workflows/: build-documentation.yml  codeql-build.yml
nos3/fsw/apps/cs/config/: default_cs_extern_typedefs.h  default_cs_fcncode_values.h  default_cs_interface_cfg_values.h  default_cs_internal_cfg_values.h  default_cs_mission_cfg.h  default_cs_msg.h  default_cs_msgdefs.h  default_cs_msgid_values.h  default_cs_msgids.h  default_cs_msgstruct.h  default_cs_platform_cfg.h  default_cs_tbl.h  default_cs_tbldefs.h  default_cs_topicid_values.h  eds_cs_extern_typedefs.h  eds_cs_fcncode_values.h  eds_cs_interface_cfg_values.h  eds_cs_msgdefs.h  eds_cs_msgstruct.h  eds_cs_tbldefs.h  eds_cs_topicid_values.h
nos3/fsw/apps/cs/docs/dox_src/: CMakeLists.txt  cs-common.doxyfile.in
nos3/fsw/apps/cs/eds/: cs.xml
nos3/fsw/apps/cs/fsw/inc/: cs_eventids.h  cs_fcncodes.h  cs_interface_cfg.h  cs_internal_cfg.h  cs_msgids.h  cs_perfids.h  cs_topicids.h
nos3/fsw/apps/cs/fsw/src/: cs_app.c  cs_app.h  cs_app_cmds.c  cs_app_cmds.h  cs_cmds.c  cs_cmds.h  cs_compute.c  cs_compute.h  cs_dispatch.c  cs_dispatch.h  cs_eds_dispatch.c  cs_eeprom_cmds.c  cs_eeprom_cmds.h  cs_init.c  cs_init.h  cs_memory_cmds.c  cs_memory_cmds.h  cs_table_cmds.c  cs_table_cmds.h  cs_table_processing.c  cs_table_processing.h  cs_utils.c  cs_utils.h  cs_verify.h  cs_version.h
nos3/fsw/apps/cs/fsw/tables/: cs_apptbl.c  cs_eepromtbl.c  cs_memorytbl.c  cs_tablestbl.c
nos3/fsw/apps/cs/unit-test/: CMakeLists.txt  cs_app_cmds_tests.c  cs_app_tests.c  cs_cmds_tests.c  cs_compute_tests.c  cs_dispatch_tests.c  cs_eds_dispatch_tests.c  cs_eeprom_cmds_tests.c  cs_init_tests.c  cs_memory_cmds_tests.c  cs_table_cmds_tests.c  cs_table_processing_tests.c  cs_utils_tests.c
nos3/fsw/apps/cs/unit-test/stubs/: cs_app_cmds_stubs.c  cs_app_stubs.c  cs_appdata_global_stub.c  cs_cmds_stubs.c  cs_compute_stubs.c  cs_dispatch_stubs.c  cs_eeprom_cmds_stubs.c  cs_init_stubs.c  cs_memory_cmds_stubs.c  cs_table_cmds_stubs.c  cs_table_processing_stubs.c  cs_utils_stubs.c
nos3/fsw/apps/cs/unit-test/utilities/: cs_test_utils.c  cs_test_utils.h
nos3/fsw/apps/noisy_app/: CMakeLists.txt
nos3/fsw/apps/noisy_app/fsw/platform_inc/: noisy_app_msgids.h
nos3/fsw/apps/noisy_app/fsw/src/: noisy_app.c
nos3/fsw/fprime/fprime-nos3/deployment/: CMakeLists.txt  Main.cpp  README.md
nos3/fsw/fprime/fprime-nos3/deployment/Top/: CMakeLists.txt  deploymentPackets.fppi  deploymentTopology.cpp  deploymentTopology.hpp  deploymentTopologyDefs.hpp  instances.fpp  topology.fpp
nos3/scripts/: cfs_evs_capture.sh  ci_launch.sh  coverage.sh  cpu_monitor.sh  (+8 more)
(+684 files in other folders)
